--- a/Xbox 360/libsmb2.vcxproj
+++ b/Xbox 360/libsmb2.vcxproj
@@ -236,6 +236,12 @@
     <None Include="..\COPYING" />
     <None Include="..\include\Makefile.am" />
     <None Include="..\lib\CMakeLists.txt" />
+    <None Include="..\lib\libsmb2.syms" />
+    <None Include="..\lib\Makefile.am" />
+    <None Include="..\lib\Makefile.AMIGA" />
+    <None Include="..\lib\Makefile.AMIGA_AROS" />
+    <None Include="..\lib\Makefile.AMIGA_OS3" />
+    <None Include="..\lib\Makefile.PS3_PPU" />
     <None Include="..\README" />
   </ItemGroup>
   <ItemGroup>
@@ -253,6 +259,7 @@
     <ClInclude Include="..\include\xbox 360\config.h" />
     <ClInclude Include="..\lib\aes.h" />
     <ClInclude Include="..\lib\aes128ccm.h" />
+    <ClInclude Include="..\lib\asn1-ber.h" />
     <ClInclude Include="..\lib\compat.h" />
     <ClInclude Include="..\lib\hmac-md5.h" />
     <ClInclude Include="..\lib\md4.h" />
@@ -267,6 +274,7 @@
     <ClCompile Include="..\lib\aes.c" />
     <ClCompile Include="..\lib\aes128ccm.c" />
     <ClCompile Include="..\lib\alloc.c" />
+    <ClCompile Include="..\lib\asn1-ber.c" />
     <ClCompile Include="..\lib\compat.c" />
     <ClCompile Include="..\lib\dcerpc-lsa.c" />
     <ClCompile Include="..\lib\dcerpc-srvsvc.c" />
@@ -280,6 +288,7 @@
     <ClCompile Include="..\lib\md5.c" />
     <ClCompile Include="..\lib\ntlmssp.c" />
     <ClCompile Include="..\lib\pdu.c" />
+    <ClCompile Include="..\lib\sha1.c" />
     <ClCompile Include="..\lib\sha224-256.c" />
     <ClCompile Include="..\lib\sha384-512.c" />
     <ClCompile Include="..\lib\smb2-cmd-close.c" />
@@ -288,6 +297,7 @@
     <ClCompile Include="..\lib\smb2-cmd-error.c" />
     <ClCompile Include="..\lib\smb2-cmd-flush.c" />
     <ClCompile Include="..\lib\smb2-cmd-ioctl.c" />
+    <ClCompile Include="..\lib\smb2-cmd-lock.c" />
     <ClCompile Include="..\lib\smb2-cmd-logoff.c" />
     <ClCompile Include="..\lib\smb2-cmd-negotiate.c" />
     <ClCompile Include="..\lib\smb2-cmd-query-directory.c" />
