proper handling of tree and message id and credits for server-side impl, provide accessors so a proxy and set hdr of new pdu based on old one

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -47,6 +47,7 @@ libsmb2_la_SOURCES = \
 	smb2-cmd-lock.c \
 	smb2-cmd-logoff.c \
 	smb2-cmd-negotiate.c \
+	smb2-cmd-notify.c \
 	smb2-cmd-query-directory.c \
 	smb2-cmd-query-info.c \
 	smb2-cmd-read.c \
