--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,9 +6,23 @@ LDADD = ../lib/libsmb2.la
 
 noinst_PROGRAMS = prog_ls
 
+EXTRA_PROGRAMS = ld_sockerr
+CLEANFILES = ld_sockerr.o ld_sockerr.so
+
+ld_sockerr_SOURCES = ld_sockerr.c
+ld_sockerr_CFLAGS = $(AM_CFLAGS) -fPIC
+
+bin_SCRIPTS = ld_sockerr.so
+
+ld_sockerr.o: ld_sockerr-ld_sockerr.o
+	$(LIBTOOL) --mode=link $(CC) -o $@ $^
+
+ld_sockerr.so: ld_sockerr.o
+	$(CC) -shared -o ld_sockerr.so ld_sockerr.o -ldl
+
 T = `ls test_*.sh`
 
-test: $(noinst_PROGRAMS)
+test: $(noinst_PROGRAMS) $(bin_SCRIPTS)
 	for TEST in $(T); do \
 		echo "Running $$TEST"; \
 		echo "--------------"; \
