--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,7 +1,7 @@
 noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-dcerpc-coder-test \
 	smb2-ftruncate-sync \
-	smb2-ls-async smb2-ls-sync \
+	smb2-ls-async \
 	smb2-put-async \
 	smb2-put-sync \
 	smb2-raw-fsstat-async \
@@ -31,7 +31,6 @@ smb2_cat_sync_LDADD = $(COMMON_LIBS)
 smb2_ftruncate_sync_LDADD = $(COMMON_LIBS)
 smb2_dcerpc_coder_test_LDADD = $(COMMON_LIBS)
 smb2_ls_async_LDADD = $(COMMON_LIBS)
-smb2_ls_sync_LDADD = $(COMMON_LIBS)
 smb2_put_async_LDADD = $(COMMON_LIBS)
 smb2_put_sync_LDADD = $(COMMON_LIBS)
 smb2_raw_fsstat_async_LDADD = $(COMMON_LIBS)
