Added example command smb2-notify under examples

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -16,7 +16,8 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-truncate-sync \
 	smb2-rename-sync \
 	smb2-CMD-FIND	\
-	smb2-server-sync
+	smb2-server-sync \
+	smb2-notify
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -45,4 +46,4 @@ smb2_truncate_sync_LDADD = $(COMMON_LIBS)
 smb2_rename_sync_LDADD = $(COMMON_LIBS)
 smb2_CMD_FIND_LDADD = $(COMMON_LIBS)
 smb2_server_sync_LDADD = $(COMMON_LIBS)
-
+smb2_notify_LDADD = $(COMMON_LIBS)
