--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,9 @@ if(NOT ESP_PLATFORM)
   if(NOT IOP AND BUILD_IRX)
     project(smb2man
             LANGUAGES C
-            VERSION 2.2.0
+            VERSION 2.3.0
     )
-    set(VERSION 2.2.0)    
+    set(VERSION 2.3.0)    
     set(PACKAGE "smb2man")
     set(PACKAGE_BUGREPORT "ronniesahlberg@gmail.com or andregui17@outlook.com")
     set(PACKAGE_NAME "smb2man")
@@ -43,23 +43,22 @@ if(NOT ESP_PLATFORM)
   configure_file(libsmb2.pc.in libsmb2.pc @ONLY)
 endif()
 
-
-  if(NOT PICO_BOARD AND NOT ESP_PLATFORM)
-      set(SOVERSION 1 CACHE STRING "" FORCE)
-      if(NOT IOP AND NOT BUILD_IRX)
-        set(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}" CACHE PATH "Installation directory for libraries")
-        set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
-        set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
-        set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
-      endif()
-      if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PS2 OR VITA OR CMAKE_SYSTEM_NAME MATCHES Dreamcast OR CMAKE_SYSTEM_NAME MATCHES NintendoGameCube OR CMAKE_SYSTEM_NAME MATCHES NintendoDS OR CMAKE_SYSTEM_NAME MATCHES NintendoWii OR CMAKE_SYSTEM_NAME MATCHES CafeOS)
-        option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
-      else()
-        option(BUILD_SHARED_LIBS "Build shared libraries" ON)
-      endif()
-        option(ENABLE_EXAMPLES "Build example programs" OFF)
+  if(NOT ESP_PLATFORM)
+    set(SOVERSION 1 CACHE STRING "" FORCE)
+    if(NOT IOP AND NOT BUILD_IRX)
+      set(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}" CACHE PATH "Installation directory for libraries")
+      set(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" CACHE PATH "Installation directory for headers")
+      set(INSTALL_PKGCONFIG_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/pkgconfig" CACHE PATH "Installation directory for pkgconfig (.pc) files")
+      set(INSTALL_CMAKE_DIR "${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/cmake/libsmb2" CACHE PATH "Installation directory for cmake (.cmake) files")
+    endif()
+    if(CMAKE_SYSTEM_NAME MATCHES NintendoSwitch OR CMAKE_SYSTEM_NAME MATCHES Nintendo3DS OR PS4 OR PS2 OR VITA OR CMAKE_SYSTEM_NAME MATCHES Dreamcast OR CMAKE_SYSTEM_NAME MATCHES NintendoGameCube OR CMAKE_SYSTEM_NAME MATCHES NintendoDS OR CMAKE_SYSTEM_NAME MATCHES NintendoWii OR CMAKE_SYSTEM_NAME MATCHES CafeOS)
+      option(BUILD_SHARED_LIBS "Build shared libraries" OFF)  
+    else()
+      option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+    endif()
+      option(ENABLE_EXAMPLES "Build example programs" OFF)
     
-        list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
+      list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/Modules)
   endif()
 
   if(CMAKE_SYSTEM_NAME MATCHES Linux)
@@ -68,7 +67,7 @@ endif()
     find_package(GSSAPI)  
   endif()
 
-  if(NOT PICO_BOARD AND NOT ESP_PLATFORM)
+  if(NOT ESP_PLATFORM)
       include(cmake/ConfigureChecks.cmake)
   endif()
 
@@ -119,20 +118,20 @@ endif()
       set(ARCH "-march=armv8-a -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-g -Wall -O2 -ffast-math ${ARCH}")
       set(CMAKE_C_FLAGS "-Wno-unused-variable")
-      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu++11")
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -std=gnu11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=switch.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
       add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")
     elseif(CMAKE_SYSTEM_NAME MATCHES Nintendo3DS)
       add_definitions(-DARM11 -D_3DS -D__3DS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R)
       set(ARCH "-march=armv6k -mfloat-abi=hard -mtune=mpcore -mtp=soft -fPIE")
       set(CMAKE_C_FLAGS "-Wno-unused-variable -g -Wall -O2 -mword-relocations -fomit-frame-pointer -ffast-math ${ARCH}")
-      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=3dsx.specs -g ${ARCH} -Wl,-Map,$(notdir $*.map)")
       add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")
     elseif(CMAKE_SYSTEM_NAME MATCHES NintendoDS)
-      add_definitions(-DARM9 -D__NDS__ -DNEED_READV -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL)
+      add_definitions(-DARM9 -D__NDS__ -DNEED_READV -DHAVE_SOCKADDR_STORAGE -DNEED_WRITEV -DNEED_GETLOGIN_R -DNEED_GETADDRINFO -DNEED_FREEADDRINFO -DNEED_POLL)
       set(CMAKE_C_FLAGS "-Wno-format -Wpointer-arith")      
-      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu++11")
+      set(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fno-rtti -fno-exceptions -std=gnu11")
       set(CMAKE_C_LDFLAGS "${CMAKE_C_FLAGS} -specs=ds_arm9.specs -g")
       add_compile_options("${CMAKE_C_FLAGS} ${CMAKE_LDFLAGS}")      
     elseif(CMAKE_SYSTEM_NAME MATCHES NintendoGameCube)      
