--- a/packaging/RPM/libsmb2.spec.in
+++ b/packaging/RPM/libsmb2.spec.in
@@ -93,6 +93,10 @@ development libraries for LibSMB2
 %{_libdir}/pkgconfig/libsmb2.pc
 
 %changelog
+* Mon Dec 16 2024 : Version 6.1.0
+ - Fix return code for smb2-ls on failure
+ - Fix memory errors in smb2_opendir()
+ - Add a macro te test for the version of the share-enum api
 * Wed Dec 11 2024 : Version 6.0.0
  - Major rewrites to DCE-RPC
  - Initial support for building servers
