--- a/Xbox 360/libsmb2.vcxproj
+++ b/Xbox 360/libsmb2.vcxproj
@@ -113,7 +113,7 @@
       <CompileAs>CompileAsC</CompileAs>
       <AdditionalIncludeDirectories>..\include\;..\include\smb2;..\include\xbox 360</AdditionalIncludeDirectories>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -200,7 +200,7 @@
       <AdditionalIncludeDirectories>..\include\;..\include\smb2;..\include\xbox 360</AdditionalIncludeDirectories>
       <CompileAs>CompileAsC</CompileAs>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -222,7 +222,7 @@
       <PrecompiledHeaderOutputFile>$(OutDir)$(ProjectName).pch</PrecompiledHeaderOutputFile>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <PreprocessorDefinitions>NDEBUG;_XBOX;LTCG;_LIB;NEED_POLL;NEED_GETPID;NEED_GETLOGIN_R;NEED_RANDOM;NEED_SRANDOM;NEED_GETADDRINFO;NEED_FREEADDRINFO;XBOX_360_PLATFORM;HAVE_CONFIG_H;_U_=/**/</PreprocessorDefinitions>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <AdditionalIncludeDirectories>..\include\;..\include\smb2;..\include\xbox 360</AdditionalIncludeDirectories>
       <CompileAs>CompileAsC</CompileAs>
     </ClCompile>
@@ -259,29 +259,38 @@
     <ClInclude Include="..\include\xbox 360\config.h" />
     <ClInclude Include="..\lib\aes.h" />
     <ClInclude Include="..\lib\aes128ccm.h" />
+    <ClInclude Include="..\lib\aes_apple.h" />
+    <ClInclude Include="..\lib\aes_reference.h" />
     <ClInclude Include="..\lib\asn1-ber.h" />
     <ClInclude Include="..\lib\compat.h" />
     <ClInclude Include="..\lib\hmac-md5.h" />
+    <ClInclude Include="..\lib\krb5-wrapper.h" />
     <ClInclude Include="..\lib\md4.h" />
     <ClInclude Include="..\lib\md5.h" />
     <ClInclude Include="..\lib\ntlmssp.h" />
     <ClInclude Include="..\lib\sha-private.h" />
     <ClInclude Include="..\lib\sha.h" />
+    <ClInclude Include="..\lib\smb2-process.h" />
     <ClInclude Include="..\lib\smb2-signing.h" />
     <ClInclude Include="..\lib\smb3-seal.h" />
+    <ClInclude Include="..\lib\spnego-wrapper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\lib\aes.c" />
     <ClCompile Include="..\lib\aes128ccm.c" />
+    <ClCompile Include="..\lib\aes_apple.c" />
+    <ClCompile Include="..\lib\aes_reference.c" />
     <ClCompile Include="..\lib\alloc.c" />
     <ClCompile Include="..\lib\asn1-ber.c" />
     <ClCompile Include="..\lib\compat.c" />
     <ClCompile Include="..\lib\dcerpc-lsa.c" />
     <ClCompile Include="..\lib\dcerpc-srvsvc.c" />
+    <ClCompile Include="..\lib\dcerpc.c" />
     <ClCompile Include="..\lib\errors.c" />
     <ClCompile Include="..\lib\hmac-md5.c" />
     <ClCompile Include="..\lib\hmac.c" />
     <ClCompile Include="..\lib\init.c" />
+    <ClCompile Include="..\lib\krb5-wrapper.c" />
     <ClCompile Include="..\lib\libsmb2.c" />
     <ClCompile Include="..\lib\md4c.c" />
     <ClCompile Include="..\lib\md5.c" />
@@ -300,6 +309,7 @@
     <ClCompile Include="..\lib\smb2-cmd-logoff.c" />
     <ClCompile Include="..\lib\smb2-cmd-negotiate.c" />
     <ClCompile Include="..\lib\smb2-cmd-notify-change.c" />
+    <ClCompile Include="..\lib\smb2-cmd-oplock-break.c" />
     <ClCompile Include="..\lib\smb2-cmd-query-directory.c" />
     <ClCompile Include="..\lib\smb2-cmd-query-info.c" />
     <ClCompile Include="..\lib\smb2-cmd-read.c" />
@@ -312,10 +322,16 @@
     <ClCompile Include="..\lib\smb2-data-filesystem-info.c" />
     <ClCompile Include="..\lib\smb2-data-reparse-point.c" />
     <ClCompile Include="..\lib\smb2-data-security-descriptor.c" />
+    <ClCompile Include="..\lib\smb2-fixed.c" />
+    <ClCompile Include="..\lib\smb2-pdu-message-id.c" />
+    <ClCompile Include="..\lib\smb2-process.c" />
     <ClCompile Include="..\lib\smb2-share-enum.c" />
     <ClCompile Include="..\lib\smb2-signing.c" />
+    <ClCompile Include="..\lib\smb2-tree-id.c" />
+    <ClCompile Include="..\lib\smb2-value.c" />
     <ClCompile Include="..\lib\smb3-seal.c" />
     <ClCompile Include="..\lib\socket.c" />
+    <ClCompile Include="..\lib\spnego-wrapper.c" />
     <ClCompile Include="..\lib\sync.c" />
     <ClCompile Include="..\lib\timestamps.c" />
     <ClCompile Include="..\lib\unicode.c" />
