--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -17,7 +17,8 @@ noinst_PROGRAMS = smb2-cat-async smb2-cat-sync \
 	smb2-rename-sync \
 	smb2-CMD-FIND	\
 	smb2-server-sync \
-	smb2-notify
+	smb2-notify\
+	ps2-usmb2-cat
 
 AM_CPPFLAGS = \
 	-I$(abs_top_srcdir)/include \
@@ -47,3 +48,4 @@ smb2_rename_sync_LDADD = $(COMMON_LIBS)
 smb2_CMD_FIND_LDADD = $(COMMON_LIBS)
 smb2_server_sync_LDADD = $(COMMON_LIBS)
 smb2_notify_LDADD = $(COMMON_LIBS)
+ps2_usmb2_cat_LDADD = $(COMMON_LIBS)
