--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -48,4 +48,4 @@ smb2_rename_sync_LDADD = $(COMMON_LIBS)
 smb2_CMD_FIND_LDADD = $(COMMON_LIBS)
 smb2_server_sync_LDADD = $(COMMON_LIBS)
 smb2_notify_LDADD = $(COMMON_LIBS)
-ps2_usmb2_cat_LDADD = $(COMMON_LIBS)
+ps2_usmb2_cat_LDADD = usmb2.o $(COMMON_LIBS)
