dlsym needs -ldl for me
configure.ac: This was Google's synthetic stupidity's prescription for:

/usr/bin/ld: prog_ls.o: undefined reference to symbol 'dlsym@@GLIBC_2.2.5'

... seen on Debian Buster in the tests/ directory.

--- a/configure.ac
+++ b/configure.ac
@@ -87,6 +87,8 @@ esac
 AM_CONDITIONAL([HAVE_WIN32], [test "${SYS}" = "mingw32"])
 AC_SUBST([LIBSOCKET])
 
+AC_CHECK_LIB([dl], [dlsym], [], [AC_MSG_ERROR([dlsym not found, libdl is required])])
+
 dnl  Check for poll.h
 AC_CHECK_HEADERS([poll.h])
 
